Edit page layout

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
       <p class="hero-heading">DIAL<span class="inverse">ED</span> IN</p>
       <p class="hero-subheading">
         Hi, Brian here! This is my light foray into a specific use case for
-        multimodal AI. Enter your name and phone number to receive a demo call
-        for a food ordering experience with brAIn!
+        multimodal AI.
+      </p>
+      <br />
+      <p class="hero-subheading">
+        Enter your name and phone number to receive a demo call for a food
+        ordering experience with brAIn! 🍕🍷
       </p>
 
       <div class="phone-container">
@@ -94,7 +98,11 @@
             class="form-confirmation"
             style="display: none"
           >
-            <p>You should receive a call shortly!</p>
+            <p>
+              You will receive a call from an American number in around 2
+              minutes due to latency issues (which I am working on!) It is not a
+              scam! The callers name will be brAIn🧠
+            </p>
           </div>
         </div>
       </div>
