--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </head>
 
   <body>
-    <div class="logo-container">
+    <!-- <div class="logo-container">
       <img src="./img/unity-logo.png" alt="Unity Logo" class="logo" />
-    </div>
+    </div> -->
 
     <div class="hero">
       <p class="hero-heading">DIAL<span class="inverse">ED</span> IN</p>
